test/success/integration/_succ_expr_not_1.hs
x :: Bool
x = not True
main = print "hello"