test/fail/integration/_fail_grammar_expr_or_1.hs
x :: Bool
x = jl || True
main = print "hello"